# wselfedu_test

./: .gitignore  Makefile  README.md  pyproject.toml
fixtures/: page.py
pages/: base.py
tests/: test_auth.py  test_home.py  test_page.py  test_state.py
tests/.auth/: state.json
wiki/: auth.md  framework.md  home.md  install.md  load_state.md  requirements.md
